prevent scrollbar from causing jump when a dropdown is open

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,6 +99,10 @@
   }
 }
 @layer base {
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
   * {
     @apply border-border;
   }
